align loginButton and fix passwordInput

--- a/src/pages/login/styles.module.css
+++ b/src/pages/login/styles.module.css
@@ -30,7 +30,8 @@
 }
 
 .userInput,
-.passwordInputContainer {
+.passwordInputContainer input[type="password"],
+.passwordInputContainer input[type="text"] {
     max-width: 100%;
     border-radius: 3.1rem;
     border: 1px solid var(--gray);
@@ -41,7 +42,11 @@
     font-family: 'Inter';
     font-weight: 400;
     outline: none;
-    padding-right: 3rem;
+    padding-right: 4.5rem;
+}
+
+.passwordInput{
+    border: none;
 }
 
 .passwordInputContainer {
@@ -50,9 +55,7 @@
     margin-bottom: 2rem;
 }
 
-.passwordInputContainer input {
-    border: none;
-}
+
 
 .passwordInput:focus,
 .userInput:focus {
@@ -97,6 +100,7 @@
     box-shadow: 0px 2px 8px 2px rgba(126, 0, 207, 0.25);
     font-family: 'Inter';
     font-weight: 700;
+    align-self: center;
 }
 
 .loginButton:hover {
